fix: make terminal horizontal scrolling work

--- a/src/main/resources/com/gummybear/style/terminal.css
+++ b/src/main/resources/com/gummybear/style/terminal.css
@@ -2,7 +2,9 @@
 .command-line {
     -fx-background-color: #1e1e1e;
     -fx-background-insets: 0;
-    -fx-fit-to-width: true;
+
+    -fx-border-width: 1;
+    -fx-border-color: green;
 }
 
 /* Remove default ScrollPane background */
@@ -36,6 +38,9 @@
     -fx-background-color: #1e1e1e;
     -fx-padding: 8;
     -fx-spacing: 4;
+
+    -fx-border-width: 1;
+    -fx-border-color: blue;
 }
 .command-line-content > .label {
     -fx-font-family: "Consolas", "Courier New", monospace;
@@ -67,8 +72,8 @@
     -fx-font-size: 13px;
     -fx-text-fill: white;
 
-    /*-fx-border-width: 1;*/
-    /*-fx-border-color: red;*/
+    -fx-border-width: 1;
+    -fx-border-color: red;
 }
 
 /* Command line input field (TextField) */
@@ -85,8 +90,8 @@
     -fx-faint-focus-color: transparent;
     -fx-max-width: infinity;
 
-    /*-fx-border-width: 1;*/
-    /*-fx-border-color: red;*/
+    -fx-border-width: 1;
+    -fx-border-color: red;
 }
 
 /* Remove focus ring entirely */
